@@ -1,6 +1,5 @@
 package net.minecraft.world;
 
-import com.google.common.collect.Lists;
 import java.util.List;
 import java.util.stream.Collectors;
 import net.minecraft.core.NonNullList;
@@ -11,12 +10,10 @@ import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.storage.ValueInput;
 import net.minecraft.world.level.storage.ValueOutput;
-import org.jspecify.annotations.Nullable;
 
 public class SimpleContainer implements Container, StackedContentsCompatible {
    private final int size;
    private final NonNullList<ItemStack> items;
-   private @Nullable List<ContainerListener> listeners;
 
    public SimpleContainer(final int size) {
       this.size = size;
@@ -26,20 +23,6 @@ public class SimpleContainer implements Container, StackedContentsCompatible {
    public SimpleContainer(final ItemStack... itemstacks) {
       this.size = itemstacks.length;
       this.items = NonNullList.of(ItemStack.EMPTY, itemstacks);
-   }
-
-   public void addListener(final ContainerListener listener) {
-      if (this.listeners == null) {
-         this.listeners = Lists.newArrayList();
-      }
-
-      this.listeners.add(listener);
-   }
-
-   public void removeListener(final ContainerListener listener) {
-      if (this.listeners != null) {
-         this.listeners.remove(listener);
-      }
    }
 
    @Override
@@ -132,6 +115,10 @@ public class SimpleContainer implements Container, StackedContentsCompatible {
    }
 
    @Override
+   public void setChanged() {
+   }
+
+   @Override
    public int getContainerSize() {
       return this.size;
    }
@@ -145,15 +132,6 @@ public class SimpleContainer implements Container, StackedContentsCompatible {
       }
 
       return true;
-   }
-
-   @Override
-   public void setChanged() {
-      if (this.listeners != null) {
-         for (ContainerListener listener : this.listeners) {
-            listener.containerChanged(this);
-         }
-      }
    }
 
    @Override
@@ -176,7 +154,7 @@ public class SimpleContainer implements Container, StackedContentsCompatible {
 
    @Override
    public String toString() {
-      return this.items.stream().filter(item -> !item.isEmpty()).collect(Collectors.toList()).toString();
+      return this.items.stream().filter(item -> !item.isEmpty()).toList().toString();
    }
 
    private void moveItemToEmptySlots(final ItemStack sourceStack) {
