@@ -1,6 +1,5 @@
 package net.minecraft.world.entity.ai.sensing;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Optional;
 import java.util.Set;
 import net.minecraft.server.level.ServerLevel;
@@ -11,16 +10,16 @@ import net.minecraft.world.entity.ai.memory.NearestVisibleLivingEntities;
 public abstract class NearestVisibleLivingEntitySensor extends Sensor<LivingEntity> {
    protected abstract boolean isMatchingEntity(final ServerLevel level, LivingEntity body, LivingEntity mob);
 
-   protected abstract MemoryModuleType<LivingEntity> getMemory();
+   protected abstract MemoryModuleType<LivingEntity> getMemoryToSet();
 
    @Override
    public Set<MemoryModuleType<?>> requires() {
-      return ImmutableSet.of(this.getMemory());
+      return Set.of(this.getMemoryToSet(), MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES);
    }
 
    @Override
    protected void doTick(final ServerLevel level, final LivingEntity body) {
-      body.getBrain().setMemory(this.getMemory(), this.getNearestEntity(level, body));
+      body.getBrain().setMemory(this.getMemoryToSet(), this.getNearestEntity(level, body));
    }
 
    private Optional<LivingEntity> getNearestEntity(final ServerLevel level, final LivingEntity body) {
